26042021 - Translation polished for some files.
Translation polished for some files.
Working with tags - finished.
4 untouched are left.

--- a/Плагины/Список плагинов.md
+++ b/Плагины/Список плагинов.md
@@ -1,8 +1,8 @@
 Одним из самых мощных аспектов использования Obsidian является возможность добавления новой функциональности через плагины. Несколько плагинов ставятся вместе с приложением, многие другие находятся в разработке. 
 
-Вы сможете создать свой собственный плагин. См. [[Сторонние плагины#For developers|сторонние плагины]].
+Вы также можете создать свой собственный плагин. См. [[Сторонние плагины#Для разработчиков|сторонние плагины]].
 
-Управлять плагинами можно через меню Настройки, которое можно вызвать в нижней части левой панели. Некоторые из плагинов имеются свои отдельные настройки, которые могут быть заданы в соответсвующей вкладке, которая появляется в Настройках после включения плагина.
+Управлять плагинами можно через меню Настройки, которое можно вызвать в нижней части левой панели. Некоторые из плагинов имеются свои отдельные настройки, которые могут быть заданы в            соответствующей вкладке, которая появляется в Настройках после включения плагина.
 
 ### Текущий список официальных плагинов
 
