--- a/Продвинутое использование/Ранние сборки.md
+++ b/Продвинутое использование/Ранние сборки.md
@@ -1,13 +1,13 @@
-Ранние (инсайдерские) сборки – это экспирементальные версии приложения Obsidian, которые раздаются держателям лицензии Catalyst на добровольной основе.
+Ранние (инсайдерские) сборки – это экспериментальные версии Obsidian, которые раздаются держателям лицензии Catalyst на добровольной основе.
 
 Пожалуйста, обратите внимание, что ранние сборки менее стабильны, чем общедоступные версии, поэтому, если вы предпочитаете беспроблемную версию, вам не нужно их включать.
 
-### Как включить ранние сборки
+### Как включить раннюю сборку
 
-Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам до момента их публикации. Чтобы получть доступ к этим сборкам перейдите в Настройки =>  Учетная запись и введите пароль, используемый на сайте Obsidian. Затем перейдите в Настройки => О программе и включите опцию «Получать ранние сборки».
+Если у вас есть [[Лицензия Catalyst|лицензия Catalyst]], у вас есть доступ к ранним сборкам Obsidian, до того, как эта версия станет доступна широкой публике. Чтобы получть к ним доступ, перейдите в раздел Настройки => Учетная запись и войдите в систему с паролем, который вы использовали на сайте Obsidian. Затем перейдите в Настройки => О программе и включите опцию «Получать ранние сборки».
 
 ![[Insider.png]]
 
-### Как сообщить о проблеме
+### Сообщить о проблемах
 
 Если вы участник нашего Discord сервера, вы можете перейти на канал #insider-build, чтобы сообщить о проблемах. Если вы отправляете отчет об ошибке на форуме, не забудьте указать версию, которую вы используете, чтобы мы могли улучшить ее, перед выпуском общедоступной версии.
