--- a/Руководства/Базовое ведение заметок.md
+++ b/Руководства/Базовое ведение заметок.md
@@ -1,8 +1,8 @@
-Если вы только что открыли Obsidian, вы увидите две области с документом. В левой области находится текстовый файл, который можно редактировать, используя синтаксис Markdown. В правой области находится _Предварительный просмотр_ того же самого текстового файла, как если бы вы его экспортировали как HTML, или как PDF документ. Обратите внимание, что некоторые вещи выглядят по-другому в Просмотре, и, что наиболее очевидно, ссылки не заключены в скобки. Чтобы перейти по ссылке, нажмите на нее в области Предварительного просмотра. Вы можете переходить по ссылкам и в области редактора, удерживая нажатой клавишу `Ctrl/Cmd` при нажатии на ссылку. Если вы хотите вернуться на страницу, на которой были раньше, используйте сочетание `Ctrl/Cmd-alt-СтрелкаВлево`.
+Если вы только что открыли Obsidian, вы увидите две области с документом. В левой области находится текстовый файл, который можно редактировать, используя синтаксис Markdown. В правой области находится _Предварительный просмотр_ того же самого текстового файла, как если бы вы его экспортировали как HTML, или как PDF документ. Обратите внимание, что некоторые вещи выглядят по-другому в режиме Просмотра, и, что наиболее очевидно, ссылки не заключены в скобки. Чтобы перейти по ссылке, нажмите на нее в области Просмотра. Вы можете переходить по ссылкам и в области Редактора, удерживая нажатой клавишу `Ctrl/Cmd` при нажатии на ссылку. Если вы хотите вернуться на страницу, на которой были раньше, используйте сочетание `Ctrl/Cmd-alt-СтрелкаВлево`.
 
 В обратную сторону, заметки, которые ссылаются на ту, в которой вы работаете, будут отображены в панели **Обратных ссылок** справа (более подробно об обратных ссылках можно почитать [[Обратные ссылки|здесь]])
 
-В любой момент, когда вы потерялись или просто хотите посмотреть что еще умеет Obsidian, `Ctrl/Cmd-P` вызовет палитру команд. В ней можно писать команды текстом, например «Вернуться назад» и вы увидите как варианты команд фильтруются до короткого списка, который также отображает и назначенные на команды горячие клавиши. 
+В любой момент, когда вы потерялись или просто хотите посмотреть что еще умеет Obsidian, `Ctrl/Cmd-P` вызовет Палитру команд. В ней можно писать команды текстом, например «Вернуться назад» и вы увидите как варианты команд фильтруются до короткого списка, который также отображает и назначенные на команды сочетания клавиш. 
 
 Фундаментально Obsidian это инструмент для работы с набором markdown файлов, хранящихся на компьютере. Если вы не знакомы с форматом Markdown, то это простой текстовый формат с условным форматированием, что делает его очень мощным (для доплнительной информации см. [[Форматирование заметок|Markdown]]). Таки образом, если вы захотите использовать Obsidian для хранения обычных заметок обо всем на свете, то он прекрасно с этим справится. 
 
