--- a/Руководства/Работа с тегами.md
+++ b/Руководства/Работа с тегами.md
@@ -1,22 +1,22 @@
-Теги – это очень удобный способ группировки нескольких заметок, чтобы их было легко найти. По сути тег – это интерактивный поиск термина по всему хранилищу. Например, нажав на ссылку #теги вы найдете все заметки, содержащие этот тег. Большинство людей используют их для классификации вещей, как класс к которому вы относите заметки или тип идеи. Некоторым людям практикующим Zettelkasten нравится использовать их как «точки входа» для размышлений о связанных идеях. Но в конечном счете они достаточно гибкие, чтобы вы могли использовать их как угодно.
+Теги – это очень удобный способ группировки нескольких заметок, чтобы их было легко найти. По сути тег – это интерактивный поиск термина по всему хранилищу. Например, нажав на ссылку #теги вы найдете все заметки, содержащие этот тег. Большинство людей используют их для классификации вещей, как класс к которому вы относите заметки или тип идеи. Некоторым людям практикующим Zettelkasten нравится использовать их как «точки входа» для размышлений о связанных идеях. Но в конечном счете теги достаточно универсальны, чтобы вы могли использовать их как угодно.
 
 ### Панель тегов
 
-Если у вас включен плагин [[Панель тегов]], вы можете увидеть список тегов, которые используются во всех ваших заметках, отсортированных по количеству. Нажатие на любой из тегов активирет поиск по нему.
+Если у вас включен плагин [[Панель тегов]], вы можете увидеть список тегов, которые используются во всех ваших заметках, отсортированных по количеству. Нажатие на любой из тегов активирует поиск по нему.
 
-Это позволяет вам искать точные совпадения с этим тегом. For example, when clicking , as per usual, but if you want to find all instances of `maintag` with all subtags, you can still use the [[Поиск]] to look for `#maintag`. This is useful in cases where you have subcategories of things but you also want to be able to easily find all instances of the higher category. %%#2do%%
+Это позволяет вам искать точные совпадения с этим тегом, как, например, когда вы по нему кликаете. Но если вы хотите найти все совпадения с основным тегом `теги`, со всеми вложенными тегами `теги/подтеги`, вы по-прежнему можете использовать [[Поиск]] для поиска основного тега #теги. Это полезно в тех случаях, когда у вас есть подкатегории объектов, но вы также хотите иметь возможность легко найти все варианты в более высокой категории. 
 
 ### Разрешенные символы
 
-Spaces are not allowed in tags. So, if you want to have multiple words in a tag, you can use these formats:
+В тегах не разрешено использовать пробелы. Поэтому, если вы хотите, что в теге было несколько слов, вы можете использоваться следующие форматы записи:
 
-- CamelCase: #TwoWords
-- Underscore: #two_words
-- Dash: #two-words
+- «ВерблюжийРегистр» (CamelCase): #ДваСлова
+- Подчёркивание: #two_words
+- Дефис-минус: #two-words
 
-The only symbols allowed are:
+Разрешено использовать только следующие символы:
 
-1. `_` (underscore) and `-` (dash) to separate words;
-2. `/` (forward slash) for [[Панель тегов#Nested tags|nested tags]].
+1. `_` (подчеркивание) и `-` (дефис-минус) для разделения слов;
+2. `/` (косая черта) для [[Панель тегов#Nested tags|вложенных теговр]].
 
-Numbers are allowed in the tag, ==as long as the tag is not purely numeric==. For example, #1984 does not form a valid tag, but #y1984 is valid.
+В теге разрешается использовать числа, ==если тег не является чисто числовым==. Например, #1984 не образует действующий тег, в отличии от #y1984.
