--- a/Руководства/Форматирование заметок.md
+++ b/Руководства/Форматирование заметок.md
@@ -134,7 +134,7 @@ http://obsidian.md - создаются автоматически!
 http://obsidian.md - создаются автоматически!
 [Obsidian](http://obsidian.md)
 
-#### Obsidian URI-ссылки
+#### Ссылки Obsidian URI
 
 Ссылки [[Использование Obsidian URI|Obsidian URI]] могут использоваться для открытия заметок из текущего хранилища, из другого хранилища или других программ.
 
@@ -200,7 +200,7 @@ http://obsidian.md - создаются автоматически!
 
 ### Блоки кода
 
-Подсветка синтаксиса поддерживается путем указания языка после первых трех обратных кавычек. Для подсветки мы используем библиотеку prismjs, список поддерживаемых языков можно найти [на их сайте](https://prismjs.com/#supported-languages).
+Подсветка синтаксиса кода поддерживается путем указания языка после первых трех обратных кавычек. Для подсветки мы используем библиотеку PrismJS, список поддерживаемых языков можно найти [на их сайте](https://prismjs.com/#supported-languages).
 
 <pre><code>```js
 function fancyAlert(arg) {
@@ -243,13 +243,13 @@ function fancyAlert(arg) {
 - [x] это выполненная задача
 - [?] это тоже выполненная задача (работает с любым символом)
 - [ ] это не выполненная задача
-- [ ] задачи в области просмотра помечаются выполненными при клике на чекбокс
+- [ ] задачи в области Просмотра могут помечаются выполненными при клике на чекбокс
 
 ---
 
 ### Таблицы
 
-Вы можете создавать таблицы из списков слов. Шапка таблицы (первая строка) отделяется от остальных строк дефисами `-`. Столбцы разделяются вертикальной чертой `|`:
+Вы можете создавать таблицы из списков слов. Шапка таблицы (первая строка) отделяется от остальных строк дефис-минусами `-`. Столбцы разделяются вертикальной чертой `|`:
 
 ```md
 Первый заголовок | Второй заголовок
@@ -266,21 +266,21 @@ function fancyAlert(arg) {
 ---
 
 ```md
-В таблицах поддерживается выравнивание | Еще один пример заголовка
+В таблицах поддерживается выравнивание | Пример выравнивания
 :------------|------------:
-с использованием двоеточия `:` | будет выровнено
+по краю с использованием двоеточия `:` | по правому краю
 ```
 
 В таблицах поддерживается выравнивание | Пример выравнивания
 :------------|------------:
 по краю с использованием двоеточия `:` | по правому краю
 
-В таблицах работаю ссылки. Если в ссылке используется вертикальная черта,  она должна быть изолирована символом  `\`, чтобы не быть распознанной как элемент таблицы .
+В таблицах работаю ссылки. Если в ссылке используется вертикальная черта `|`,  она должна быть изолирована символом  `\`, чтобы не быть распознанной как элемент таблицы.
 
 ```md
 Первый заголовок | Второй заголовок
 ------------ | ------------
-[[Форматирование заметок\|Форматирование]]	|  [[Сочетание клавиш\|Горячие клавиши]]
+[[Форматирование заметок\|Форматирование]]	|  [[Сочетания клавиш\|Горячие клавиши]]
 ```
 
 Первый заголовок | Второй заголовок
@@ -312,11 +312,11 @@ function fancyAlert(arg) {
 ### Сноски
 
 ```md
-Пример простой сноки[^1] и пример сноски подлинее[^большая сноска].
+Пример простой сноски[^1] и пример сноски подлиннее[^большая_сноска].
 
 [^1]: со смыслом!
 
-[^большая сноска]: с несколькими абзацами и кодом.
+[^большая_сноска]: с несколькими абзацами и кодом.
 
     Делайте отступ перед абзацем чтобы включить его в сноску.
 
@@ -325,15 +325,17 @@ function fancyAlert(arg) {
     Абзацев может быть сколько угодно.
 ```
 
-Пример простой сноки[^1] и пример сноски подлинее.[^большая_сноска]
+Пример простой сноски[^1] и пример сноски подлиннее[^большая_сноска].
 
 [^1]: со смыслом!
 
 [^большая_сноска]: с несколькими абзацами и кодом.
 
-	Делайте отступ перед абзацем чтобы включить его в сноску.
-	`{ мой код }`
-	Абзацев может быть сколько угодно.
+    Делайте отступ перед абзацем чтобы включить его в сноску.
+
+    `{ мой код }`
+
+    Абзацев может быть сколько угодно.
 
 ```md
 Сноски также можно оставлять прямо в тексте.^[обратите внимание, что карет `^` при этом выносится за скобки.]
@@ -342,8 +344,6 @@ function fancyAlert(arg) {
 Сноски также можно оставлять прямо в тексте.^[обратите внимание, что карет `^` при этом выносится за скобки.]
 
 ### Математические формулы
-
-Вы можете добавлять в текст математические формулы.
 
 Для отображения формулы в отдельном блоке, необходимо заключить ее в двойные `$$`:
 
@@ -361,13 +361,13 @@ c & d
 Так же возможно отображение формулы внтури строки $e^{2i\pi} = 1$.
 ```
 
-Так же возможно отображение формулы внтури строки $e^{2i\pi} = 1$.
+Так же возможно отображение формулы внутри строки $e^{2i\pi} = 1$.
 
 Obsidian использует библиотеку [Mathjax](http://docs.mathjax.org/en/latest/basic/mathjax.html) для отображения математических формул. Вы можете ознакомиться со списком расширений поддерживаемых в Mathjax [тут](http://docs.mathjax.org/en/latest/input/tex/extensions/index.html).
 
 ### Комментарии
 
-Используйте двойные `%%` для вложения комментариев, которые будут распознаны как Markdown-текст, но не будут показаны в режиме просмотра.
+Используйте двойные `%%` для вложения комментариев, которые будут распознаны как текст Markdown, но не будут показаны в режиме просмотра.
 
 ```md
 Комментарий внутри текста: %%скрытый комментарий%% (который, не виден в режиме просмотра)
@@ -432,8 +432,9 @@ class A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z internal-link;
 
 Если вы используете специальные символы в названиях заметок, то вам нужно заключать их в двойные кавычки:
 `"⨳ специальный символ"`
+
 Во [[Форматирование заметок#^376b9d|втором способе]] это делается следующим образом:
-`A["⨳ special character"]`
+`A["⨳ специальный символ"]`
 
 ## Примечания разработчика
 
