--- a/Obsidian/Мобильное приложение бета-тестирование.md
+++ b/Obsidian/Мобильное приложение бета-тестирование.md
@@ -10,13 +10,13 @@
 
 Если у вас уже есть лицензия Catalyst уровня VIP/Supporter, [присоединяйтесь к нам в Discord](https://discord.gg/veuWUTm). Если у вас еще нет бейджа, [[Лицензия Catalyst#Бейдж в Discord|вы можете получить его на странице своего аккаунта]].
 
-Как только вы получите свой бейдж, вы сможете получить доступ к бета-тестированию и возможности оставить свой отзыв в канале #mobile. Инструкции по установке мобильного приложения находятся в закрепленных сообщениях в канале #mobile.
+Как только вы получите свой бейдж, вы сможете получить доступ к бета-тестированию и возможности оставить свой отзыв в канале \#mobile. Инструкции по установке мобильного приложения находятся в закрепленных сообщениях в канале \#mobile.
 
 ## Как оставить отзыв?
 
 Перед тем как сообщать об ошибке или оставлять запрос на добавление функции, пожалуйста, ознакомьтесь со [списком известных ошибок на нашем форуме](https://forum.obsidian.md/t/list-of-known-issues/14286), чтобы узнать, что уже известно и что уже есть в плане развития.
 
-Текущая группа развернутого бета-тестирования может получить доступ к каналу #mobile в Discord, равно как и к новому разделу форума Mobile, при условии, что вы уже получили бейдж лицензии Catalyst соответствующего уровня.
+Текущая группа развернутого бета-тестирования может получить доступ к каналу \#mobile в Discord, равно как и к новому разделу форума Mobile, при условии, что вы уже получили бейдж лицензии Catalyst соответствующего уровня.
 
 Для учета сообщений об ошибках и запросов на добавление функций, направляйте их на форум, как обычно. Спасибо, что опробовали нашу бета-версию!
 
