--- a/Продвинутое использование/Удаление файлов.md
+++ b/Продвинутое использование/Удаление файлов.md
@@ -1,6 +1,6 @@
 У Obsidian есть несколько вариантов реализации удаления файлов для различных потребностей пользователя.
 
-- По умолчению удаленные файлы переносятся в системную корзину. После этого вы можете использовать любые способы работы с удаленными файлами, которые предоставляет операционная система. Например, восстановить их если они были удалены по ошибке.
+- По умолчанию удаленные файлы переносятся в системную корзину. После этого вы можете использовать любые способы восстановления файлов, которые предоставляет операционная система, если они были удалены по ошибке.
 
 - Удаленные файлы могут быть перенесены в специальную папку  `.trash` внутри текущего хранилища. Это может быть полезно если вам необходима возможность восстанавливать файлы хранилища отдельно от системной корзины.
 
