--- a/Вложения/Демонстрация слайдов.md
+++ b/Вложения/Демонстрация слайдов.md
@@ -1,14 +1,14 @@
 ## Obsidian демонстрация слайдов
 
 Для просмотра слайдов необходимо включить плагин Слайды.
-Это можно сделать в меню Настроек в левом нижнем углу. 
+Это можно сделать в меню Настроек, кнопка в левом нижнем углу. 
 
 ---
 
 ## Цели Obsidian
 
 - Долговечность
-- Поощрение сети знаний
+- Создание сети знаний
 - Персонализация
 
 ---
@@ -26,7 +26,7 @@
 
 - [[Создание внутренних ссылок|Внутренние ссылки]]
 - Автозаполнение ссылок
-- Отображение ссылок на несвязанные упоминания заметки
+- Отображение ссылок на несвязанные упоминания
 - Представление в виде Графа
 
 ---
