--- a/Кастомизация/Внешний вид.md
+++ b/Кастомизация/Внешний вид.md
@@ -1,6 +1,6 @@
 ### Базовая тема оформления
 
-Obsidian поставляется с двумя базовыми темами оформления, светлым и темным. Этот параметр устанавливает цветовую схему по умолчанию, которую ваша тема будет использовать для отображения своей версии в светлом или темном режиме.
+Obsidian поставляется с двумя базовыми режимами оформления, светлым и темным. Этот параметр задает цветовую схему по умолчанию, которую ваша тема будет использовать для отображения своей версии в светлом или темном режиме.
 
 ### Сторонние темы оформления
 
