--- a/Плагины/Файловый менеджер.md
+++ b/Плагины/Файловый менеджер.md
@@ -1,4 +1,4 @@
-Файловый менеджер показывает [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]] в вашем хранилище. В нем вы можете открывать заметки, [[Создание заметок|создавать заметки]] и папки, а так же [[Переименование заметки|переименовывать их]]. Нажатие правой кнопки мыши на файле заметки или на папке в Файловом менеджере вызывает меню с соответствующими вариантами действий, такими как переименование или создание копии. Это также лучший способ установить папку по умолчанию для [[Встраивание вложений в заметки|вложенных файлов]].
+Файловый менеджер показывает [[Поддерживаемые форматы файлов|поддерживаемые форматы файлов]] в вашем хранилище. В нем вы можете открывать заметки, [[Создание заметок|создавать заметки]] и папки, а так же [[Переименование заметок|переименовывать их]]. Нажатие правой кнопки мыши на файле заметки или на папке в Файловом менеджере вызывает меню с соответствующими вариантами действий, такими как переименование или создание копии. Это также лучший способ установить папку по умолчанию для [[Встраивание вложений в заметки|вложенных файлов]].
 
 Это один из важнейших плагинов, который мы рекомендуем вам оставить включенным.
 
