--- a/Продвинутое использование/Перетаскивание объектов.md
+++ b/Продвинутое использование/Перетаскивание объектов.md
@@ -14,7 +14,7 @@
 
 ### Куда можно их перетаскивать
 
-- Вы можете перетащить файл в заголовок панели, чтобы открыть его в этой панели. Если удерживать `Alt` (или `Shift` в MacOS) при перетаскивании, файл будет открыт в этой панели, даже если он был перенесен не в заголовок.
+- Вы можете перетащить файл в заголовок панели, чтобы открыть его в этой панели. Если удерживать `Alt` (или `Shift` в macOS) при перетаскивании, файл будет открыт в этой панели, даже если он был перенесен не в заголовок.
 - Вы можете перетащить файл в папку в [[Файловый менеджер|файловом менеджере]], чтобы переместить файл туда.
 - Вы можете перетащить файл в область открытую в режиме редактирования, чтобы вставить его как ссылку. Формат получившейся ссылки будет соответствовать формату, выбранного вами в настройках, такому как относительный путь к файлу или ссылка в формате Markdown.
 - Вы можете поместить файл в панель [[Избранное|избранного]], чтобы пометить его как избранный.
