--- a/Плагины/Диктофон.md
+++ b/Плагины/Диктофон.md
@@ -1,4 +1,4 @@
-Диктофон это плагин, который позволяет делать аудио-запись, не покидая Obsidian. Он полезен для записи звука на лекциях и встречах, когда по каким-либо причинам вы не успеваете, или для записи важных дискуссий, чтобы не упустить ни одной детали.
+Диктофон – это плагин, который позволяет делать аудио-запись, не покидая Obsidian. Он полезен для записи звука на лекциях и встречах, когда по каким-либо причинам вы не успеваете печатать, или для записи важных дискуссий, чтобы не упустить ни одной детали.
 
 Для использования просто нажмите на значок микрофона в левой панели:
 
@@ -6,4 +6,4 @@
 
 Микрофон будет окрашен красным во время записи.
 
-Чтобы закончить запись, нажмите на него еще раз. Аудиофайл теперь сохранен в ваше хранилище, а сама запись добавлена будет добавлена в конец текущей заметки.
+Чтобы закончить запись, нажмите на него еще раз. Аудиофайл теперь сохранен в ваше хранилище, а сама запись будет добавлена в конец текущей заметки.
