--- a/Плагины/Слайды.md
+++ b/Плагины/Слайды.md
@@ -1,6 +1,6 @@
 Плагин Слайды позволяет делать простые презентации прямо внутри Obsidian.
 
-### Как пользоваться
+### Советы по использованию
 
 1. Для разделения слайдов используйте новую строку и `---` как разделитель.
 2. Чтобы начать презентацию, выберите пункт Начать презентацию в дополнительном меню в правом верхнем углу области заметки:
@@ -11,4 +11,4 @@
 
 ### Пример
 
-Ознакомтесь с демонстрационным документом: [[Демонстрация слайдов]]
+Ознакомьтесь с демо-документом: [[Демонстрация слайдов]]
