--- a/Кастомизация/Внешний вид.md
+++ b/Кастомизация/Внешний вид.md
@@ -1,15 +1,15 @@
 ### Базовая тема оформления
 
-Obsidian поставляется с двумя базовыми режимами оформления, светлым и темным. Этот параметр задает цветовую схему по умолчанию, которую ваша тема будет использовать для отображения своей версии в светлом или темном режиме.
+Obsidian поставляется с двумя базовыми режимами оформления, светлым и темным. Этот параметр задает цветовую схему по умолчанию, которую будет использовать ваша тема для отображения в светлом или темном режиме.
 
 ### Сторонние темы оформления
 
 Есть множество сторонних тем, созданных участниками нашего замечательного сообщества, из которых вы можете выбрать.
 
-Вы можете легко настроить любую тему, добавив [[Добавление пользовательских CSS#Use Themes and or CSS snippets|CSS snippets]]. %%#2do%%
+Вы можете легко подправить любую тему, добавив [[Добавление пользовательских CSS#Использование тем и или CSS-фрагментов|свой CSS-фрагмент]].
 
 ### Полупрозрачность
 
 Вы можете сделать окно приложения полупрозрачным включив этот параметр в Настройках на вкладке Оформление. В настоящий момент данный параметр доступен только для Windows и macOS.
 
-В Windows существует известная проблема, когда перетаскивание окна происходит чрезвычаной медленно, если включена полупрозрачность. Это происходит из-за ошибки Windows. Отслеживать статус исправления проблемы можно в GitHub по ссылке: https://github.com/riverar/sample-win32-acrylicblur/issues/2 %%#2do%%
+В Windows существует известная проблема, когда перетаскивание окна происходит чрезвычайно медленно, если включена полупрозрачность. Это происходит из-за ошибки Windows. Отслеживать статус исправления проблемы можно в GitHub по ссылке: https://github.com/riverar/sample-win32-acrylicblur/issues/2
