--- a/Плагины/Быстрый переход.md
+++ b/Плагины/Быстрый переход.md
@@ -1,7 +1,7 @@
-Быстрый переход позволяет переключаться на другие заметки не убирая рук с клавиатуры. Для вызова используется горячая клавиша `Ctrl/Cmd+O`. Просто начните вводить название заметки в появившемся диалоговом окне и плагин предложит подходящие имена файлов. Используйте стрелки вверх и вниз для навигации по результатам, `Enter` – для перехода к результату, и `Esc` – для выхода из быстрого перехода. Удержание `Cmd/Ctrl` при выборе приведет к открытию заметки в новой области. 
+Быстрый переход позволяет переключаться на другие заметки не убирая рук с клавиатуры. Для вызова используется сочетание клавиш `Ctrl/Cmd+O`. Просто начните вводить название заметки в появившемся диалоговом окне и плагин предложит подходящие имена файлов. Используйте стрелки вверх и вниз для навигации по результатам, `Enter` – для перехода к результату, и `Esc` – для выхода из быстрого перехода. Удержание `Cmd/Ctrl` при выборе приведет к открытию заметки в новой области. 
 
-Если вы хотите создать новую заметку, то достаточно ввести уникальное имя заметки в диалоговом окне Быстрого перехода. Если имя схоже с существующей заметкой, Быстрый переход по умолчанию откроет исходную заметку. Если удерживать `Shift` при выборе, то новая заметка будет создана с любым заданным именем. Клавишу `Shift` можно нажимать совместно с `Cmd/Ctrl` для создания новой заметки в новой области интерфейса. %%#2do%%
+Если вы хотите создать новую заметку, то достаточно ввести уникальное имя заметки в диалоговом окне Быстрого перехода. Если имя схоже с существующей заметкой, Быстрый переход по умолчанию откроет исходную заметку. Если удерживать `Shift` при выборе, то новая заметка будет создана с любым заданным именем. Клавишу `Shift` можно нажимать совместно с `Cmd/Ctrl` для создания новой заметки в новой области интерфейса.
 
 ![[Pasted image 11.png]]
 
-Сразу при открытии диалогового окна и до какого-либо ввода будут показаны 5 самых последних открытых заметок. Это полезно для переключения, например, к прошлой заметке последовательностью клавиш `Ctrl/Cmd+O` → `Стрелка вниз` → `Enter`.
+Сразу при открытии диалогового окна и до какого-либо ввода будут показаны 5 самых последних открытых заметок. Это полезно для переключения, например, к прошлой заметке последовательностью клавиш `Ctrl/Cmd+O` -> `Стрелка вниз` -> `Enter`.
