--- a/Плагины/Ежедневные заметки.md
+++ b/Плагины/Ежедневные заметки.md
@@ -1,4 +1,4 @@
-Плагин Ежедневные заметки создаст новую заметку, которая будет автоматически названа текущей датой. Если такая заметка уже существует, то плагин откроет эту заметку. Это полезный способ вести ежедневный журнал, список дел или список ссылок на заметки, которые вы создали в определенный день.
+Плагин Ежедневные заметки создаст новую заметку, которая будет автоматически названа текущей датой. Если такая заметка уже существует, то плагин откроет эту заметку. Это удобный способ вести ежедневный журнал, список дел или список ссылок на заметки, которые вы создали в определенный день.
 
 Формат даты и папку по умолчанию для ежедневных заметок можно задать в Настройках на вкладке плагина Ежедневные заметки. По умолчанию используется формат даты "ГГГГГ-ММ-ДД" (формат ISO). Этот формат означает, что список ежедневных заметок, отсортированный в алфавитном порядке, будет также и в хронологическом порядке.
 
