20210429 - 'Add aliases to note' translated + minor fixes
20210429 - 'Add aliases to note' translated + minor fixes

--- a/Руководства/Добавление псевдонима к заметке.md
+++ b/Руководства/Добавление псевдонима к заметке.md
@@ -1,39 +1,39 @@
 ---
-aliases: alias, aliases
+aliases: псевдоним, псевдонимы
 ---
 
-Sometimes, you might want to refer to the same file with multiple names in different contexts. These alternative names are what we call "aliases".
+Иногда вам может потребоваться сослаться на один и тот же файл используя несколько имен в разных случаях. Эти альтернативные имена мы называем «псевдонимами».
 
-For example, you might want to refer to your partner by their full name, first name, or a nickname. Or you might want to refer to "artificial intelligence" by its abbreviation "AI". If you know multiple languages, you may want to refer to the same concept with their name in the same language that the rest of the note is written in.
+Например, вы можете обратиться к собеседнику по его полному имени, простому имени или прозвищу. Или вы можете сослаться на «Искусственный Интеллект» по его аббревиатуре «ИИ». Или если вы знаете несколько языков, вы можете сослаться на понятие с его наименованием на том языке, на котором написана остальная часть заметки.
 
-### Set aliases
+### Добавление псевдонимов
 
-Starting in 0.9.16, you're able to specify the "aliases" property in a note's [[Заголовок YAML]] like so:
+Начинася с версии 0.9.16, вы можете указывать ключ "aliases" в [[Заголовок YAML|заголовке YAML]] следующим образом:
 
 ```
 ---
-aliases: [AI, Artificial Intelligence]
+aliases: [ИИ, Искусственный Интеллект]
 ---
 ```
 
-Please note that this section must be placed at the very top of a note to take effect.
+Обратите внимание, что этот раздел должен быть помещен в самый верх заметки для того, чтобы это сработало.
 
-In the future, we'll consider more user-friendly ways to manage aliases than manually writing them in front matter.
+В будущем мы рассмотрим более удобные для пользователя способы управления псевдонимами, чем их ввод вручную.
 
-### Link with aliases
+### Создание ссылок с псевдонимами
 
-Once you've set aliases for a file, you can write `[[alias]]` to link to the original page. A redirect icon will show up in the auto-complete list like so:
+После того как вы добавили псевдонимы к заметке, вы можете использовать `[[псевдоним]]` при вводе ссылки на исходную заметку. Значок перенаправления появится в списке автозаполнения:
 
 ![[Insert alises.png]]
 
-An internal link with display text will get inserted like so: `[[Add aliases to note|alias]]`.
+Внутренняя ссылка с будет вставлена следующим образом: `[[Добавление псевдонима к заметке|псевдоним]]`.
 
-Note: the link to alias is **NOT** inserted as `[[alias]]` for interoperability, so that other software can recognize it as well.
+Примечание: ссылка на псевдоним заметки **НЕ** вставляется как `[[псевдоним]]` для обеспечения совместимости, чтобы другие приложения также могли распознать ее.
 
-### Find unlinked mentions
+### Поиск упоминаний без ссылки
 
-After you've set aliases for a note, you can find unlinked mentions by both its name and its aliases.
+После того как вы добавили псевдонимы к заметке, вы можете найти ее упоминания без ссылки как по имени заметки так и по ее псевдониму.
 
-For example, after setting "AI" as an alias for "Artificial intelligence", you'll see mentions of "AI" in other files in the [[Обратные ссылки]] section.
+Например, после того как «ИИ» добавлен как псевдоним для «Искусственного Интеллекта», вы увидите упоминания «ИИ» в других файлах в секции [[Обратные ссылки]].
 
-If you decide to link this mention, a link with display text set to the alias will be created for you. Following the example above, `AI` will become `[[Artificial intelligence|AI]]` once you click on the "Link" button.
+Если вы решите создать ссылку на это упоминание, будет создана ссылка на заметку с псевдонимом в названии. Следуя приведенному выше примеру, `AI` превратится в `[[Искусственный интеллект|AI]]`, как только вы нажмете кнопку «Ссылка».
