--- a/Obsidian/Мобильное приложение бета-тестирование.md
+++ b/Obsidian/Мобильное приложение бета-тестирование.md
@@ -1,14 +1,14 @@
 ## Статус бета-версии
 
-По состоянию на 26 марта 2021 года мобильное приложение находится в закрытом бета-тестировании. На данный момент оно доступно только для держателей лицензий Obsidian Catalyst уровня `VIP` и `Supporter`.
+По состоянию на 26 апреля 2021 года мобильное приложение находится в закрытом бета-тестировании. На данный момент оно доступно для всех держателей лицензии Obsidian Catalyst.
 
-Через несколько недель, как только приложение станет более стабильным, мы выпустим его для держателей лицензий Catalyst уровня `Insider`, а затем уже и для всех остальных.
+Через несколько недель, как только приложение станет более стабильным, мы выпустим его для держателей лицензии Catalyst уровня `Insider`, а затем уже и для всех остальных.
 
 ## Получение доступа
 
-Бета-тестирование мобильного приложения доступно на данный момент только для держателей лицензий [Obsidian Catalyst уровня VIP/Supporter](https://obsidian.md/pricing).
+Бета-тестирование мобильного приложения доступно на данный момент только для держателей лицензии [Obsidian Catalyst](https://obsidian.md/pricing).
 
-Если у вас уже есть лицензия Catalyst уровня VIP/Supporter, [присоединяйтесь к нам в Discord](https://discord.gg/veuWUTm). Если у вас еще нет бейджа, [[Лицензия Catalyst#Бейдж в Discord|вы можете получить его на странице своего аккаунта]].
+Если у вас уже есть лицензия Catalyst, [присоединяйтесь к нам в Discord](https://discord.gg/veuWUTm). Если у вас еще нет бейджа, [[Лицензия Catalyst#Бейдж в Discord|вы можете получить его на странице своего аккаунта]].
 
 Как только вы получите свой бейдж, вы сможете получить доступ к бета-тестированию и возможности оставить свой отзыв в канале \#mobile. Инструкции по установке мобильного приложения находятся в закрепленных сообщениях в канале \#mobile.
 
