--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -35,7 +35,7 @@
 
 - [[Работа с тегами]]
 - [[Работа с обратными ссылками]]
-- [[Работа с несколькими файлами]]
+- [[Работа с несколькими заметками]]
 - [[Размещение областей]]
 - [[Работа с несколькими хранилищами]]
 - [[Работа с несколькими курсорами]]
