--- a/Лицензии и дополнительные сервисы/Политика возврата средств.md
+++ b/Лицензии и дополнительные сервисы/Политика возврата средств.md
@@ -4,7 +4,7 @@
 
 И хотя они и могут предоставить вам эксклюзивный ранний доступ к инсайдерским сборкам или к определенным функциям в бета-версиях (например, доступ к мобильному приложению или другим основным функциям), мы не продаем их как продукт.
 
-Мы не можем обеспечить возврат средств с приобретения лицензий Catalyst. Спасибо за понимание!
+Мы не можем обеспечить возврат средств с приобретения лицензии Catalyst. Спасибо за понимание!
 
 Если у вас есть какая-либо проблема с переводом средств, пожалуйста свяжитесь с нами через support@obsidian.md или в Discord.
 
