--- a/Начните здесь.md
+++ b/Начните здесь.md
@@ -12,7 +12,7 @@
 - Как [[Форматирование заметок|форматировать заметки]] с помощью Markdown
 - Как делать [[Встраивание вложений в заметки|вложение файлов]] или других заметок
 - [[Сочетания клавиш]]
-- Как [[Работа с несколькими файлами|открыть несколько файлов]] друг за другом %%#2do%%
+- Как [[Работа с несколькими заметками|открыть несколько заметок]] одновременно
 - Obsidian можно расширить функционально с помощью [[Список плагинов|плагинов]]. Некоторые уже поставляются в комплекте и могут быть включены или отключены в зависимости от ваших потребностей.
 
 Если вам интересно более детальное введение, включая краткий рассказ о нашей философии, почитайте [[Obsidian]].
