--- a/Продвинутое использование/Перетаскивание объектов.md
+++ b/Продвинутое использование/Перетаскивание объектов.md
@@ -2,7 +2,7 @@
 
 ### Перетаскивание областей
 
-См. [[Работа с несколькими файлами|перетаскивание панелей]]
+См. [[Работа с несколькими заметками|перетаскивание панелей]]
 
 ### Откуда можно перетаскивать объекты
 
