--- a/Руководства/Режимы просмотра и редактирования.md
+++ b/Руководства/Режимы просмотра и редактирования.md
@@ -1,5 +1,5 @@
 В Obsidian документ может быть открыт в режиме Редактирования или в режиме Просмотра. В режиме Редактирования вы увидите базовую визуализацию Markdown. Такие вещи как подсветка синтаксиса кода или вложение файлов будут отображаться только в режиме Просмотра. В частности, любые встраиваемые изображения будут видны только в режиме Просмотра.
 
-Для переключения между режимами Просмотра и Редактирования, нажмите на кнопку Просмотра/Редактирования в строке заголовка. В области в режиме Редактирования иконка будет выглядеть как «страница», а в области режима Просмотра как «карандаш». Если при нажатии на кнопку удерживать `Cmd/Ctrl`, то просмотр будет открыт в [[Связанная область|связанной области]]. Вы также можете переключаться между режимами просмотра/редактирования по нажатию `Cmd/Ctrl-E`, и это сочетание клавиш конечно может быть изменено.
+Для переключения между режимами Просмотра и Редактирования, нажмите на кнопку Просмотр/Редактирование в строке заголовка. В области в режиме Редактирования иконка будет выглядеть как «страница», а в области режима Просмотра как «карандаш». Если при нажатии на кнопку удерживать `Cmd/Ctrl`, то просмотр будет открыт в [[Связанная область|связанной области]]. Вы также можете переключаться между режимами просмотра/редактирования по нажатию `Cmd/Ctrl-E`, и это сочетание клавиш конечно может быть изменено.
 
 Если для открытия по умолчанию вы предпочитаете режим Просмотра вместо Редактирования, этот параметр может быть изменен через [[Палитра команд|Палитру команд]]. Вы также можете изменить [[Сочетания клавиш|сочетание клавиш]] для переключения между вариантами этого параметра настроек.
