20210501 - 1 new translated, other minors
20210501 - 1 new translated, other minors

--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -36,7 +36,7 @@
 - [[Работа с тегами]]
 - [[Работа с обратными ссылками]]
 - [[Работа с несколькими заметками]]
-- [[Размещение областей]]
+- [[Расположение областей]]
 - [[Работа с несколькими хранилищами]]
 - [[Работа с несколькими курсорами]]
 - [[Использование Obsidian URI]]
