--- a/Руководства/Переименование заметок.md
+++ b/Руководства/Переименование заметок.md
@@ -1,4 +1,4 @@
-Если вы уже редактируете заметку, то переименовать ее можно отредактировав текст в названии файла:
+Если вы уже редактируете заметку, то переименовать ее можно отредактировав текст в заголовке:
 
 ![[Pasted image 6.png]]
 
