--- a/Руководства/Работа с несколькими заметками.md
+++ b/Руководства/Работа с несколькими заметками.md
@@ -2,11 +2,11 @@
 
 Чтобы эффективно использовать раздельный просмотр, вам нужно знать всего несколько вещей:
 
-##### 1. ==Используйте клавишу Ctrl/Cmd==  когда хотите открыть что-либо в новой области.
+##### 1. ==Используйте клавишу Ctrl/Cmd== когда хотите открыть что-либо в новой области.
 
-По умолчанию, когда вы щелкаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком файла, а имя открытого файла отображается ярче, чем в неактивной области. 
+По умолчанию, когда вы щелкаете по чему-либо, оно открывается в активной области. Активная область отмечена выделенной полосой под заголовком, а имя открытого файла отображается ярче, чем в неактивной области. 
 
-Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы щелкаете по чему-либо в режиме Просмотра и `Shift + Ctrl/Cmd` в режиме Редактиварования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также отновится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удераживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка файла и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
+Для открытия заметок в новых областях, удерживайте `Ctrl/Cmd` если вы щелкаете по чему-либо в режиме Просмотра и `Shift + Ctrl/Cmd` в режиме Редактирования. Это относится к ряду мест, включая [[Файловый менеджер]], [[Обратные ссылки]] (упоминания со ссылкой и без), результаты [[Поиск|Поиска]] и [[Граф]]. Это также относится к кнопкам. Например, вместо просмотра заметки в активной области, вы можете удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка и открыть ее в новой области. При использовании Быстрого перехода, удержание `Cmd/Ctrl` при нажатии `Enter` приводит к открытию новой области.
 
 ---
 
@@ -30,24 +30,24 @@
 
 ##### 4. Используйте ==связанные области== для просмотра.
 
-When creating [[Связанная область|linked panes]], `Ctrl/Cmd+click` the preview or edit button when a Markdown file is open.
+[[Связанная область]] создается, если удерживая `Ctrl/Cmd` щелкнуть по кнопке Просмотр/Редактирование в строке заголовка.
 
-When linked to another pane, the panes' scroll position will be synced, and if you open a file in one pane, the other pane will open the same file.
+При привязке к другой области положение прокрутки областей будет синхронизировано, и если вы откроете файл в одной области, в связанной области откроется тот же файл.
 
-[[Связанная область|Linked panes]] will be marked with a link icon. You can hover the link to see which pane it's linked to, or click the icon to release it, so that they are no longer linked.
+[[Связанная область|Связанные области]] будут отмечены иконкой звена цепочки. Вы можете навести курсор на иконку, чтобы увидеть какая область связана с какой, или нажать на иконку чтобы отвязать области друг от друга.
 
-For more information see [[Связанная область|linked panes]].
+Для получения дополнительной информации см. [[Связанная область]].
 
 ![[Pasted image 18.png]]
 
 ##### 5. Области могут быть ==перегруппированы перетаскиванием==.
 
-Grab the icon in the upper left corner to arrange them however you need. For detailed information, see [[Размещение областей]].
+Тяните за значок в левом верхнем углу, чтобы расположить их так, как вам нужно. Для получения более подробной информации см. [[Расположение областей]].
 
 ---
 
-Useful tips:
+Полезные советы:
 
-1. You can resize the panes however you want, by dragging the resize handle that's between each pane.
+1. Вы можете изменять размер областей как угодно, перетаскивая разделитель между ними.
 
-2. Your file layout, including their sizes, will be remembered when you close the app, so don't worry about having to set them up every time you open the app!
+2. Расположение областей, включая их размеры, будет сохранен, когда вы закроете приложение, поэтому не беспокойтесь о необходимости настраивать их каждый раз, когда вы открываете приложение!
