--- a/Руководства/Работа с обратными ссылками.md
+++ b/Руководства/Работа с обратными ссылками.md
@@ -10,4 +10,4 @@
 
 Если ссылка появляется в «Упоминаниях без ссылки», и вы хотите связать её, при наведении курсора на текст появится специальная кнопка для выполенения этой операции. Нажатие этой кнопки автоматически добавит выделенный текст в скобки, создав прямую ссылку.
 
-Вы также можете создать отдельную область с обратными ссылоками через меню дополнительных настроек «Еще». Это  будет [[Связанная область|связанная область]] соединённая с заметкой, и как описано в [[Размещение областей|Размещении областей]], эту область можно передвигать куда угодно. Эту функцию можно также реализовать в [[Палитра команд|палитре команд]].
+Вы также можете создать отдельную область с обратными ссылоками через меню дополнительных настроек «Еще». Это  будет [[Связанная область|связанная область]] соединённая с заметкой, и как описано в [[Расположение областей|Размещении областей]], эту область можно передвигать куда угодно. Эту функцию можно также реализовать в [[Палитра команд|палитре команд]].
