--- a/Руководства/Работа с несколькими хранилищами.md
+++ b/Руководства/Работа с несколькими хранилищами.md
@@ -1,10 +1,8 @@
+Собрание заметок в Obsidian называется хранилищем. Хранилище сосотоит из папки и всех ее подпапок. Прямо сейчас вы смотрите на хранилище `Справка Obsidian`, которое представляет собой просто папку с файлами, включенными в Obsidian.
 
+Вы можете открыть другое хранилище где угодно на вашем компьютере и оно сохранит свои собственные индивидуальные [[Список плагинов|плагины]] и [[Добавление пользовательских CSS|стили оформления]]. Это полезно, например, если у вас есть одно хранилище, в котором вы храните заметки и другое хранилище, в котором вы пишете в развернутой форме.
 
-Each collection of notes in Obsidian is known as a Vault. A Vault consists of a folder, and any sub-folders within it. Right now, you're looking at the `Obsidian Help` Vault, which is just a folder of files included with Obsidian.
-
-You can open another Vault anywhere on your computer, and it will retain its own individual [[Список плагинов|Plugins]] and [[Добавление пользовательских CSS|custom styling]]. This is useful, for example, if you have one Vault where you keep notes but a different one in which you do long-form writing.
-
-A new or existing Vault can be opened from the button just above the Settings gear.
+Новое или существующее хранилище можно открыть с помощью кнопки чуть выше шестеренки «Настройки».
 
 ![[Vault picker.png]]
 
